--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,71 @@ body {
   overflow: hidden;
   perspective: 1000px;
 }
+.surat
+{
+  position: fixed;
+  display: flex;
+  color: #fff;
+  width: 100%;
+  height: 20%;
+  justify-content: center;
+  align-items: center;
+}
+.surat h1
+{
+  display: flex;
+  width: auto;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-size: 4em;
+  animation: smoke 5s linear alternate;
+}
+.surat:hover h1 span 
+{
+  animation: smoke 5s linear;
+}
+.surat h1:nth-child(1)
+{
+  animation-delay: 0s;
+}
+.surat h1:nth-child(2)
+{
+  animation-delay: 0.1s;
+}
+.surat h1:nth-child(3)
+{
+  animation-delay: 0.2s;
+}
+.surat h1:nth-child(4)
+{
+  animation-delay: 0.3s;
+}
+.surat h1:nth-child(5)
+{
+  animation-delay: 0.4s;
+}
+@keyframes smoke
+{
+  0%
+  {
+    filter: blur(0);
+  }
+  40%
+  {
+    filter: blur(40px);
+  }
+  80%
+  {
+    filter: blur(0);
+  }
+  100%
+  {
+    filter: blur(0);
+  }
+}
 .night {
   position: fixed;
   left: 50%;
